--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -3,9 +3,9 @@
     "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.app.tsbuildinfo",
     "target": "ES2022",
     "useDefineForClassFields": true,
-    "lib": ["ES2022", "DOM", "DOM.Iterable"],
+    "lib": ["ES2022", "DOM", "DOM.Iterable", "WebWorker"],
     "module": "ESNext",
-    "types": ["vite/client"],
+    "types": ["vite/client", "@serwist/vite/typings"],
     "skipLibCheck": true,
 
     /* Bundler mode */
